syntax = "proto3";

package community;

option go_package = "aycom/backend/proto/community";

import "google/protobuf/timestamp.proto";

service CommunityService {

  rpc CreateCommunity(CreateCommunityRequest) returns (CommunityResponse);
  rpc UpdateCommunity(UpdateCommunityRequest) returns (CommunityResponse);
  rpc ApproveCommunity(ApproveCommunityRequest) returns (CommunityResponse);
  rpc DeleteCommunity(DeleteCommunityRequest) returns (EmptyResponse);
  rpc GetCommunityByID(GetCommunityByIDRequest) returns (CommunityResponse);
  rpc ListCommunities(ListCommunitiesRequest) returns (ListCommunitiesResponse);
  rpc SearchCommunities(SearchCommunitiesRequest) returns (ListCommunitiesResponse);
  rpc ListUserCommunities(ListUserCommunitiesRequest) returns (ListCommunitiesResponse);

  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (EmptyResponse);
  rpc GetCategoryByID(GetCategoryByIDRequest) returns (CategoryResponse);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc AddCommunityToCategory(AddCommunityToCategoryRequest) returns (EmptyResponse);
  rpc RemoveCommunityFromCategory(RemoveCommunityFromCategoryRequest) returns (EmptyResponse);
  rpc GetCommunityCategoriesById(GetCommunityCategoriesByIdRequest) returns (ListCategoriesResponse);

  rpc AddMember(AddMemberRequest) returns (MemberResponse);
  rpc RemoveMember(RemoveMemberRequest) returns (EmptyResponse);
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
  rpc UpdateMemberRole(UpdateMemberRoleRequest) returns (MemberResponse);

  rpc AddRule(AddRuleRequest) returns (RuleResponse);
  rpc RemoveRule(RemoveRuleRequest) returns (EmptyResponse);
  rpc ListRules(ListRulesRequest) returns (ListRulesResponse);

  rpc RequestToJoin(RequestToJoinRequest) returns (JoinRequestResponse);
  rpc ApproveJoinRequest(ApproveJoinRequestRequest) returns (JoinRequestResponse);
  rpc RejectJoinRequest(RejectJoinRequestRequest) returns (JoinRequestResponse);
  rpc ListJoinRequests(ListJoinRequestsRequest) returns (ListJoinRequestsResponse);
  rpc IsMember(IsMemberRequest) returns (IsMemberResponse);
  rpc HasPendingJoinRequest(HasPendingJoinRequestRequest) returns (HasPendingJoinRequestResponse);

  rpc CreateChat(CreateChatRequest) returns (ChatResponse);
  rpc AddChatParticipant(AddChatParticipantRequest) returns (ChatParticipantResponse);
  rpc RemoveChatParticipant(RemoveChatParticipantRequest) returns (EmptyResponse);
  rpc ListChats(ListChatsRequest) returns (ListChatsResponse);
  rpc ListChatParticipants(ListChatParticipantsRequest) returns (ListChatParticipantsResponse);

  rpc SendMessage(SendMessageRequest) returns (MessageResponse);
  rpc DeleteMessage(DeleteMessageRequest) returns (EmptyResponse);
  rpc UnsendMessage(UnsendMessageRequest) returns (EmptyResponse);
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
  rpc SearchMessages(SearchMessagesRequest) returns (ListMessagesResponse);
}

message EmptyResponse {}

message Community {
  string id = 1;
  string name = 2;
  string description = 3;
  string logo_url = 4;
  string banner_url = 5;
  string creator_id = 6;
  bool is_approved = 7;
  repeated Category categories = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message Category {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
}

message Member {
  string community_id = 1;
  string user_id = 2;
  string role = 3;
  google.protobuf.Timestamp joined_at = 4;
}

message Rule {
  string id = 1;
  string community_id = 2;
  string rule_text = 3;
  google.protobuf.Timestamp created_at = 4;
}

message JoinRequest {
  string id = 1;
  string community_id = 2;
  string user_id = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
}

message Chat {
  string id = 1;
  bool is_group = 2;
  string name = 3;
  string created_by = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ChatParticipant {
  string chat_id = 1;
  string user_id = 2;
  bool is_admin = 3;
  google.protobuf.Timestamp joined_at = 4;
}

message Message {
  string id = 1;
  string chat_id = 2;
  string sender_id = 3;
  string content = 4;
  string media_url = 5;
  string media_type = 6;
  google.protobuf.Timestamp sent_at = 7;
  bool unsent = 8;
  google.protobuf.Timestamp unsent_at = 9;
  bool deleted_for_sender = 10;
  bool deleted_for_all = 11;
  string reply_to_message_id = 12;
}

message CreateCommunityRequest { Community community = 1; }
message CommunityResponse { Community community = 1; }
message UpdateCommunityRequest { Community community = 1; }
message ApproveCommunityRequest { string community_id = 1; }
message DeleteCommunityRequest { string community_id = 1; }
message GetCommunityByIDRequest { string community_id = 1; }
message ListCommunitiesRequest { int32 offset = 1; int32 limit = 2; }
message ListCommunitiesResponse { 
  repeated Community communities = 1; 
  int32 total_count = 2;
}

message SearchCommunitiesRequest { 
  string query = 1;
  repeated string categories = 2;
  int32 offset = 3; 
  int32 limit = 4; 
}

message ListUserCommunitiesRequest { 
  string user_id = 1; 
  string status = 2; 
  string query = 3;
  repeated string categories = 4;
  int32 offset = 5; 
  int32 limit = 6;
}

message CreateCategoryRequest { Category category = 1; }
message CategoryResponse { Category category = 1; }
message UpdateCategoryRequest { Category category = 1; }
message DeleteCategoryRequest { string category_id = 1; }
message GetCategoryByIDRequest { string category_id = 1; }
message ListCategoriesRequest { }
message ListCategoriesResponse { repeated Category categories = 1; }
message AddCommunityToCategoryRequest { 
  string community_id = 1;
  string category_id = 2;
}
message RemoveCommunityFromCategoryRequest {
  string community_id = 1;
  string category_id = 2;
}
message GetCommunityCategoriesByIdRequest { string community_id = 1; }

message AddMemberRequest { string community_id = 1; string user_id = 2; string role = 3; }
message RemoveMemberRequest { string community_id = 1; string user_id = 2; }
message ListMembersRequest { string community_id = 1; }
message ListMembersResponse { repeated Member members = 1; }
message UpdateMemberRoleRequest { string community_id = 1; string user_id = 2; string role = 3; }
message MemberResponse { Member member = 1; }

message AddRuleRequest { string community_id = 1; string rule_text = 2; }
message RemoveRuleRequest { string rule_id = 1; }
message ListRulesRequest { string community_id = 1; }
message ListRulesResponse { repeated Rule rules = 1; }
message RuleResponse { Rule rule = 1; }

message RequestToJoinRequest { string community_id = 1; string user_id = 2; }
message ApproveJoinRequestRequest { string join_request_id = 1; }
message RejectJoinRequestRequest { string join_request_id = 1; }
message ListJoinRequestsRequest { string community_id = 1; }
message ListJoinRequestsResponse { repeated JoinRequest join_requests = 1; }
message JoinRequestResponse { JoinRequest join_request = 1; }
message IsMemberRequest { string community_id = 1; string user_id = 2; }
message IsMemberResponse { bool is_member = 1; }
message HasPendingJoinRequestRequest { string community_id = 1; string user_id = 2; }
message HasPendingJoinRequestResponse { bool has_request = 1; }

message CreateChatRequest { bool is_group = 1; string name = 2; repeated string participant_ids = 3; string created_by = 4; }
message ChatResponse { Chat chat = 1; }
message AddChatParticipantRequest { string chat_id = 1; string user_id = 2; bool is_admin = 3; }
message RemoveChatParticipantRequest { string chat_id = 1; string user_id = 2; }
message ListChatsRequest { string user_id = 1; }
message ListChatsResponse { repeated Chat chats = 1; }
message ListChatParticipantsRequest { string chat_id = 1; }
message ListChatParticipantsResponse { repeated ChatParticipant participants = 1; }
message ChatParticipantResponse { ChatParticipant participant = 1; }

message SendMessageRequest {
  string chat_id = 1;
  string sender_id = 2;
  string content = 3;
  string media_url = 4;
  string media_type = 5;
  string reply_to_message_id = 6;
}
message MessageResponse { Message message = 1; }
message DeleteMessageRequest { string message_id = 1; }
message UnsendMessageRequest { string message_id = 1; }
message ListMessagesRequest { string chat_id = 1; int32 offset = 2; int32 limit = 3; }
message ListMessagesResponse { repeated Message messages = 1; }
message SearchMessagesRequest { string chat_id = 1; string query = 2; int32 offset = 3; int32 limit = 4; }